--- a/views/not-found.html
+++ b/views/not-found.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>404</title>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="/">Shop</a></li>
-          <li><a href="/add-product">Add product</a></li>
+  <body class="body">
+    <header class="main-header">
+      <nav class="main-header__nav">
+        <ul class="main-header__item-list">
+          <li class="main-header__item"><a href="/">Shop</a></li>
+          <li class="main-header__item">
+            <a href="/add-product">Add product</a>
+          </li>
         </ul>
       </nav>
     </header>
