--- a/views/add-product.html
+++ b/views/add-product.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main>
-      <form class="product-from" action="/add-product" method="POST">
+      <form class="product-from" action="/admin/add-product" method="POST">
         <div class="form-control">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" />
