--- a/views/not-found.html
+++ b/views/not-found.html
@@ -13,7 +13,7 @@
         <ul class="main-header__item-list">
           <li class="main-header__item"><a href="/">Shop</a></li>
           <li class="main-header__item">
-            <a href="/add-product">Add product</a>
+            <a href="/admin/add-product">Add product</a>
           </li>
         </ul>
       </nav>
