--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,26 +1,25 @@
-.product-from {
-  width: 20rem;
-  max-width: 90%;
-  margin: auto;
+.product-form {
+    width: 20rem;
+    max-width: 90%;
+    margin: auto;
 }
-.form-control {
-  margin: 1rem 0;
+
+.product-item {
+    width: 20rem;
+    max-width: 95%;
 }
-.form-control label,
-.form-control input {
-  display: block;
-  width: 100%;
+
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
 }
-.form-control input {
-  height: 1.5rem;
-  border: 1px solid #9c8500;
-  border-radius: 2px;
+
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
 }
-button {
-  border: 1px solid #7d009c;
-  background-color: white;
-  color: #7d009c;
-  border-radius: 2px;
-  padding: 0.2rem 0.5rem;
-  cursor: pointer;
+
+.product__description {
+    text-align: center;
 }
